Fixed several bugs in district assignment. Added code to parse addresses given in a single String.